fixing the spacing in our goals. And removing the bg of some of the shops images. Also added the border for some of the images and changing the bg colour

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,16 @@
 
-$background_colour: #E8F5E9;
+$body-bg: #e5f5e7;
+
+$border-radius: 3rem;
+// $bs-card-color: #16d12f;
+li.my-3{
+    margin-top: 3rem !important;
+    margin-bottom: 3rem !important;
+
+} 
+
+
+
 
 
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
